# yct

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
src/ytc/: _extract.py  channels.py  cli.py  transcript.py  version.py
tests/: test_channels.py  test_cli.py  test_search.py  test_version.py
